--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: brew install automake lzo asciidoc docbook-xsl gdb ccache libarchive expect telnet util-linux gnu-getopt ninja coreutils
+        run: brew install automake lzo asciidoc docbook-xsl gdb ccache libarchive expect telnet util-linux gnu-getopt ninja coreutils util-linux
 
       - name: Configure(autotools)
         run: |
@@ -79,7 +79,7 @@ jobs:
       - name: Test(tests taken from original project)
         run: |
           cd $GITHUB_WORKSPACE
-          make test -j$(nproc) TESTCC=clang TESTCXX=clang++
+          make test -j$(nproc) TESTCC=clang TESTCXX=clang++ SUDO=1
 
   cmake-macos:
     runs-on: macos-10.15
@@ -91,6 +91,7 @@ jobs:
 
       - name: Configure(cmake)
         run : |
+          ls /usr/local/opt/util-linux/bin
           export PKG_CONFIG_PATH="/usr/local/opt/libarchive/lib/pkgconfig"
           export PATH="/usr/local/opt/gnu-getopt/bin:/usr/local/opt/util-linux/bin:$PATH"
           cd $GITHUB_WORKSPACE
