--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,6 +94,8 @@ jobs:
       - name: Configure(cmake)
         run : |
           cd $GITHUB_WORKSPACE
+          export PKG_CONFIG_PATH="/usr/local/opt/libarchive/lib/pkgconfig"
+          export PATH="/usr/local/opt/gnu-getopt/bin:/usr/local/opt/util-linux/bin:$PATH"
           cmake -GNinja
 
       - name: Build(cmake)
