--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,7 +81,7 @@ jobs:
           cd $GITHUB_WORKSPACE
           export PKG_CONFIG_PATH="/usr/local/opt/libarchive/lib/pkgconfig"
           export PATH="/usr/local/opt/gnu-getopt/bin:/usr/local/opt/util-linux/bin:$PATH"
-          make test -j$(nproc) TESTCC=clang TESTCXX=clang++ SUDO=1 VERBOSE=1
+          make test -j$(nproc) TESTCC=clang TESTCXX=clang++ SUDO=1 VERBOSE=1 V=1
 
   cmake-macos:
     runs-on: macos-10.15
