Add missing libarchive include path to daemon/Makefile.am

--- a/daemon/Makefile.am
+++ b/daemon/Makefile.am
@@ -15,7 +15,8 @@ iceccd_LDADD = \
 	$(LIBARCHIVE_LIBS)
 
 AM_CPPFLAGS = \
-	-I$(top_srcdir)/services
+	-I$(top_srcdir)/services \
+	$(LIBARCHIVE_CFLAGS)
 
 AM_LIBTOOLFLAGS = --silent
 
